--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,293 @@
-/* pages/index/index.wxss */
+page{
+	background: #efefef;
+}
+/* tabNav */
+.tabNav{
+	background: #fff;
+	padding: 20rpx 30rpx 1rpx;
+	margin-bottom: 22rpx;
+}
+.tabNavList {
+	margin-bottom: 20rpx;
+}
+.tabNavList .listTab{
+	float: left;
+	width: 25%;
+	text-align: center;
+}
+.tabNavList .listTab navigator{
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+.tabNavList .listTab .imgView{
+	width: 88rpx;
+	height: 88rpx;
+	margin:0 auto;
+}
+.tabNavList .listTab .imgView image{
+	width: 100%;
+	height: 100%;
+}
+.tabNavList .listTab .listTabTit{
+	width: 100%;
+	height: 35rpx;
+	line-height: 35rpx;
+	font-size: 28rpx;
+	color:#0c1b2b ;
+}
+/* toutiao */
+.hotNews{
+	padding: 0 30rpx;
+	height:88rpx ;
+	background: #fff;
+	margin-bottom: 20rpx;
+}
+.hotNews image{
+	width:80rpx ;
+	height: 56rpx;
+	float: left;
+	margin:16rpx 10rpx 0 0;
+}
+.swiper{
+	width: 76%;
+	height: 88rpx;
+	line-height: 88rpx;
+	font-size: 28rpx;
+	float: left;
+	color: #606060;
+}
+.swiper navigator{
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+.goMore{
+	width: 10%;
+	line-height: 88rpx;
+	float: right;
+	height: 100%;
+	display: block;
+	text-align: right;
+}
+.goMore i{
+	font-size: 28rpx;
+	color: #a9a9a9;
+}
+/* rqmaoyi */
+.rqMaoyi{
+	padding: 0rpx 30rpx 20rpx;
+	background: #fff;
+	margin-bottom: 20rpx;
+}
+.myTit{
+	height: 80rpx;
+	line-height: 80rpx;
+}
+.myTit text{
+	font-size: 32rpx;
+	color:#121212 ;
+	float: left;
+}
+.myTit text.subTxt{
+	margin-left: 15rpx;
+	font-size: 24rpx;
+	color: #aeaeae;
+}
+.myTit  navigator{
+	width: 15%;
+	height: 100%;
+	float: right;
+	text-align: right;
+	font-size: 28rpx;
+	color: #a9a9a9;
+}
+.myImg{
+	width: 100rpx;
+	height: 100rpx;
+	float: left;
+	background: pink;
+}
+.myImg image{
+	width: 100%;
+	height: 100%;
+}
+.rqMyListCon{
+	width:82%;
+	height: 100rpx;
+	float: left;
+	margin-left: 20rpx;
+	position: relative;
+}
+.rqMyListCon .rqMyListTit{
+	width: 100%;
+	font-size: 29rpx;
+	color: #121212;
+}
+.rqMyListCon .psArea,
+.rqMyListCon .yzyy,
+.from{
+	font-size: 24rpx;
+	color:#a9a9a9 ;
+}
+.rqMyListCon .yzyy text:last-child,
+.from text:nth-of-type(3n-1){
+	margin-left: 20rpx;
+}
+.goViewBtn{
+	width: 130rpx ;
+	height: 46rpx;
+	line-height: 46rpx;
+	font-size: 25rpx;
+	color: #3c7de9;
+	background: #f5f5f5;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	bottom: 20rpx;
+	border-radius: 26rpx;
+}
+/* modulePart */
+.modulePart{
+	padding: 15rpx 30rpx;
+	background: #fff;
+	margin-bottom: 20rpx;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.modItem{
+	width: 218rpx;
+	height: 244rpx;
+	position: relative;
+}
+.modItem image{
+	width: 100%;
+	height: 100%;
+}
+.modItem .modTit{
+	font-size: 30rpx;
+	color: #fff;
+	position: absolute;
+	top: 20rpx;
+	left: 20rpx;
+}
+.modItem .newPubNum{
+	width: 140rpx;
+	height: 40rpx;
+	line-height: 40rpx;
+	background: #fff;
+	background: #fff;
+	border-radius: 26rpx;
+	position: absolute;
+	left: 20rpx;
+	top: 70rpx;
+	font-size: 22rpx;
+	text-align: center;
+}
+.modItem .newPubNum.hczuCol{
+	color:#ff8f00 ;
+}
+.modItem .newPubNum.sbmmCol{
+	color:#ff336d  ;
+}
+.modItem .newPubNum.cgmmCol{
+	color:#0d5efe ;
+}
+/* 行业资讯 */
+.newsList{
+	padding: 0 30rpx 20rpx;
+	background: #fff;
+	margin-bottom: 20rpx;
+}
+.listNews{
+	border-bottom: 1rpx solid #e8e8e8;
+	padding: 20rpx 0;
+}
+.listNews:last-child{
+	border-bottom: none;
+	padding-bottom: 0;
+}
+.listNews navigator{
+	width: 100%;
+	height:108rpx ;
+	display: block;
+}
+.listNewsImg{
+	float: left;
+	width: 145rpx;
+	height: 108rpx;
+	background: pink;
+}
+.listNewsCon{
+	float: left;
+	margin-left: 20rpx;
+	width: 76%;
+	height: 108rpx;
+}
+.newsTit{
+	height: 50rpx;
+	line-height: 50rpx;
+	font-size: 29rpx;
+	color: #121212;
+}
+.from{
+	margin-top: 20rpx;
+}
+.from text:last-child{
+	float: right;
+	color: #3c7de9;
+}
+/* zpQz */
+.zpQz{
+	padding: 0 30rpx 20rpx;
+	background: #fff;
+	margin-bottom: 20rpx;
+}
+.zpQzItem{
+	width:304rpx;
+	height: 140rpx;
+	border-radius: 6rpx;
+	float: left;
+	position: relative;
+	padding: 0 15rpx;
+}
+.zpQzItem:last-child{
+	float: right;
+}
+.zpQzItem.zpItem{
+	background: #e8f5e9;
+}
+.zpQzItem.qzItem{
+	background: #e1f5fe;
+}
+.zpQzTit{
+	width: 80%;
+	height: 60rpx;
+	line-height: 60rpx;
+	font-size: 28rpx;
+	color: #121212;
+}
+.zpQzTxt{
+	font-size: 24rpx;
+	color: #606060;
+	-webkit-line-clamp: 2;
+}
+.typeItem{
+	width: 25%;
+	height:35rpx ;
+	line-height: 35rpx;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	top: 0;
+	color: #fff;
+	font-size: 22rpx;
+	border-radius: 0 6rpx 0 8rpx;
+}
+.typeItem.zpItem{
+	background: #a5d6a7;
+}
+.typeItem.qzItem{
+	background: #81d4fa;
+}
