--- a/app.wxss
+++ b/app.wxss
@@ -22,16 +22,19 @@
 	height: 100%;
 	display: block;
 }
-.triangle{
-	width: 0px;
-	height: 0px;
-	border-width: 11rpx;
+.pubBtnWrap{
+	width: 96rpx;
+	height: 96rpx;
+	position: fixed;
+	right: 30rpx;
+	bottom: 100rpx;
+	z-index: 10;
 }
-.triTop{
-	border-style: solid dashed dashed dashed;
-	border-color:#c8c8c8 transparent transparent transparent ;
+.pubBtnWrap image{
+	width: 100%;
+	height: 100%;
 }
-.lngAnim{
+/* .lngAnim{
 	-webkit-animation-duration:.3s;
 	animation-duration:.3s;
 	-webkit-animation-fill-mode:both;
@@ -61,3 +64,4 @@
 	-webkit-animation-name:lngAnim-upbit;
 	animation-name:lngAnim-upbit
 }
+ */
