--- a/pages/rqMaoyi/index.wxss
+++ b/pages/rqMaoyi/index.wxss
@@ -1,1 +1,115 @@
-/* pages/rqMaoyi/index.wxss */
+.filterWrap{
+	height: 100rpx;
+	display: flex;
+	justify-content: space-between;
+	padding: 0 30rpx;
+	align-items: center;
+	background: #fff;
+	position: relative;
+	z-index: 3;
+}
+.inputView{
+	width: 80%;
+	height: 70rpx;
+	background: #efefef;
+	border-radius: 40rpx;
+	position: relative;
+}
+.inputView i{
+	position: absolute;
+	left: 4%;
+	top: 22rpx;
+	color: #606060;
+	font-size: 32rpx;
+}
+.inputView input{
+	width: 70%;
+	font-size: 28rpx;
+	height: 100%;
+	padding: 0 15%;
+	color: #606060;
+}
+.filterBtn text{
+	font-size: 28rpx;
+	color:#606060 ;
+	margin-right:12rpx ;
+}
+.filterBtn i{
+	color:#606060 ;
+	font-size: 26rpx;
+}
+.rqList{
+	padding: 0 30rpx;
+}
+.listItem{
+	border-bottom: 1rpx solid #e8e8e8;
+	padding: 20rpx 0;
+}
+.imgView{
+	width: 160rpx;
+	height: 160rpx;
+	float: left;
+	background: pink;
+	margin-right: 15rpx;
+}
+.imgView image{
+	width: 100%;
+	height: 100%;
+	border-radius: 6rpx;
+}
+.listItemCon{
+	width: 75%;
+	height: 160rpx;
+	float: left;
+	position: relative;
+}
+.psArea{
+	height: 50rpx;
+	line-height: 50rpx;
+	font-size: 30rpx;
+	color: #121212;
+}
+.yzyyd{
+	font-size: 28rpx;
+	color: #606060;
+	height: 40rpx;
+	line-height: 40rpx;
+}
+.yzyyd text:last-child{
+	margin-left: 20rpx;
+}
+.priceView{
+	height: 35rpx;
+	line-height: 35rpx;
+}
+.priceView .detPrice{
+	float: left;
+}
+.priceView .detPrice .rmb{
+	color: #d32f2f;
+	font-size: 24rpx;
+	margin-right: 2rpx;
+}
+.priceView .detPrice .priceNum{
+	font-size: 32rpx;
+	color: #d32f2f;
+	font-weight: 620;
+}
+.priceView .detPrice .unitTxt{
+	font-size: 24rpx;
+	color: #a9a9a9;
+}
+.priceView .zzl{
+	float: left;
+	margin-left: 15rpx;
+	font-size: 24rpx;
+	color: #a9a9a9;
+	margin-top: 5rpx;
+}
+.judgeTxt{
+	font-size: 24rpx;
+	color: #606060;
+	position: absolute;
+	left: 0;
+	bottom: -5rpx;
+}
