--- a/app.wxss
+++ b/app.wxss
@@ -34,6 +34,15 @@
 	width: 100%;
 	height: 100%;
 }
+.layer{
+	position: absolute;
+	left:0;
+	right: 0;
+	top: 0;
+	bottom: 0; 
+	background:rgba(0,0,0,.2);
+	z-index: 100;
+}
 /* .lngAnim{
 	-webkit-animation-duration:.3s;
 	animation-duration:.3s;
