--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -73,25 +73,24 @@
 <!-- 今日头条 -->
 <view class="hotNews">
 	<image src="../../images/tt.png" mode="widthFix"></image>
-	<swiper
-		autoplay="true"
-		interval="3000"
-		vertical="true"
-		class="swiper">
-		<swiper-item>
-			<navigator>
-				<view class="swiper-item ellip">凡事都是独立开发建设地方</view>
-			</navigator>
-		</swiper-item>
-		<swiper-item>
-			<navigator>
-				<view class="swiper-item ellip">凡事都是独立开发建凡事都是独立开发建设地凡事都是独立开发建设地凡事都是独立开发建设地设地方111</view>
-			</navigator>
-		</swiper-item>
-	</swiper>
-	<navigator class="goMore" hover-class="none">
+	<block wx:if="{{wholeIndexData.topMsgList.length > 0}}">
+		<swiper
+			autoplay="true"
+			interval="3000"
+			vertical="true"
+			class="swiper">
+			<swiper-item
+				wx:for="{{wholeIndexData.topMsgList}}"
+				wx:key="*this"
+			>{{item.title}}</swiper-item>
+		</swiper>
+	</block>
+	<block wx:else>
+		<view class="noTmpData">今日暂无最新价格变动</view>
+	</block>
+	<!-- <navigator class="goMore" hover-class="none">
 		<i class="iconfont icon-gengduo"></i>
-	</navigator>
+	</navigator> -->
 </view>
 <!-- 燃气贸易 -->
 <view class="rqMaoyi">
@@ -101,14 +100,14 @@
 	</view>
 	<view class="rqMyList clearfix">
 		<view class="myImg">
-			
+			<image src="{{wholeIndexData.gasTradeList.headImg}}"></image>
 		</view>
 		<view class="rqMyListCon">
-			<view class="rqMyListTit ellip">蔡先生发布了一条卖气信息</view>
-			<view class="psArea">配送区域：北京/天津/河北</view>
+			<view class="rqMyListTit ellip">{{wholeIndexData.gasTradeList[0].title}}</view>
+			<view class="psArea ellip">配送区域：{{wholeIndexData.gasTradeList[0].psArea}}</view>
 			<view class="yzyy">
-				<text>液质：井口气22</text>
-				<text>液源：内蒙古</text>
+				<text>液质：{{wholeIndexData.gasTradeList[0].gasTypeName}}</text>
+				<text>液源：{{wholeIndexData.gasTradeList[0].yyd}}</text>
 			</view>
 			<navigator class="goViewBtn">去查看</navigator>
 		</view>
@@ -119,21 +118,21 @@
 	<view class="modItem">
 		<navigator class="blockA" hover-class="none">
 			<text class="modTit">货车租卖</text>
-			<view class="newPubNum hczuCol">0条新发布</view>
+			<view class="newPubNum hczuCol">{{wholeIndexData.tructsTradeNum}}条新发布</view>
 			<image src="../../images/hczmBig.png"></image>
 		</navigator>
 	</view>
 	<view class="modItem">
 		<navigator class="blockA">
 			<text class="modTit">设备买卖</text>
-			<view class="newPubNum sbmmCol">3条新发布</view>
+			<view class="newPubNum sbmmCol">{{wholeIndexData.rqDevTradeNum}}条新发布</view>
 			<image src="../../images/sbmmBig.png"></image>
 		</navigator>
 	</view>
 	<view class="modItem">
 		<navigator class="blockA">
 			<text class="modTit">储罐买卖</text>
-			<view class="newPubNum cgmmCol">3条新发布</view>
+			<view class="newPubNum cgmmCol">{{wholeIndexData.potTradeNum}}条新发布</view>
 			<image src="../../images/cgmmBig.png"></image>
 		</navigator>
 	</view>
@@ -146,36 +145,28 @@
 		<navigator hover-class="none">更多</navigator>
 	</view>
 	<view class="newsListCon">
-		<view class="listNews clearfix">
-			<navigator>
-				<view class="listNewsImg">
-					
-				</view>
-				<view class="listNewsCon">
-					<view class="newsTit ellip">如何确保天然气迎峰度冬？发改委峰度冬？发改委从</view>
-					<view class="from">
-						<text>来源:LNG新闻</text>
-						<text>2019-12-31</text>
-						<text>阅读全文</text>
+		<block wx:if="{{wholeIndexData.newsList.length > 0}}">
+			<view class="listNews clearfix"
+				wx:for="{{wholeIndexData.newsList}}"
+				wx:key="*this"
+			>
+				<navigator>
+					<view class="listNewsImg">
+						
 					</view>
-				</view>
-			</navigator>
-		</view>
-		<view class="listNews clearfix">
-			<navigator>
-				<view class="listNewsImg">
-					
-				</view>
-				<view class="listNewsCon">
-					<view class="newsTit ellip">如何确保天然气迎峰度冬？发改委峰度冬？发改委从</view>
-					<view class="from">
-						<text>来源:LNG新闻</text>
-						<text>2019-12-31</text>
-						<text>阅读全文</text>
+					<view class="listNewsCon">
+						<view class="newsTit ellip">{{item.newTitle}}</view>
+						<view class="from">
+							<text>{{item.addTime}}</text>
+							<text>阅读全文</text>
+						</view>
 					</view>
-				</view>
-			</navigator>
-		</view>
+				</navigator>
+			</view>
+		</block>
+		<block wx:else>
+			<view>暂无资讯</view>
+		</block>
 	</view>
 </view>
 <!-- 找人找活 -->
@@ -185,14 +176,24 @@
 	</view>
 	<view class="zpQzList clearfix">
 		<view class="zpQzItem zpItem">
-			<view class="typeItem zpItem">聘司机</view>
-			<view class="zpQzTit ellip">荣达能源有限公荣达能源有限公</view>
-			<view class="zpQzTxt multiEllip">现工司需要招聘工司需要招聘一名司机， 具体要求如工司需要招聘一名司机， 具体要求如一名司机， 具体要求如下：男性，3-5</view>
+			<block wx:if="{{wholeIndexData.zpList.length > 0}}">
+				<view class="typeItem zpItem">聘司机</view>
+				<view class="zpQzTit ellip">{{wholeIndexData.zpList[0].cpyName}}</view>
+				<view class="zpQzTxt multiEllip">驾照类型：{{wholeIndexData.zpList[0].jzType}} 要求驾龄{{wholeIndexData.zpList[0].jlYear}} 年龄范围{{wholeIndexData.zpList[0].ageRange}} 公司地址{{wholeIndexData.zpList[0].ageRange.address}}</view>
+			</block>
+			<block wx:else>
+				<view>暂无招聘信息</view>
+			</block>
 		</view>
 		<view class="zpQzItem qzItem">
-			<view class="typeItem qzItem">求职</view>
-			<view class="zpQzTit">李先生</view>
-			<view class="zpQzTxt multiEllip">35周岁   B2驾照   驾龄5年</view>
+			<block wx:if="{{wholeIndexData.qzList.length > 0}}">
+				<view class="typeItem qzItem">求职</view>
+				<view class="zpQzTit">{{wholeIndexData.qzList[0].qzUserName}}</view>
+				<view class="zpQzTxt multiEllip">{{wholeIndexData.qzList[0].userAge}}周岁  {{wholeIndexData.qzList[0].jzType}}驾照   驾龄{{wholeIndexData.qzList[0].jzYear}}年</view>
+			</block>
+			<block wx:else>
+				<view>暂无求职信息</view>
+			</block>
 		</view>
 	</view>
 </view>
