--- a/app.wxss
+++ b/app.wxss
@@ -17,6 +17,9 @@
 	white-space: normal !important;
 	-webkit-box-orient: vertical;
 }
+.padd{
+	padding: 0 30rpx;
+}
 .blockA{
 	width: 100%;
 	height: 100%;
