--- a/pages/msg/index.wxml
+++ b/pages/msg/index.wxml
@@ -1,6 +1,3 @@
-<view class="home" style="{{translate}}">Home</view>
-
-
-<view class="page_tab">Page_tab</view>
-
-<view class='bg' bindtap='hideview' style='display:{{display}}'></view> 
+<picker mode="multiSelector" bindchange="bindMultiPickerChange" bindcolumnchange="bindMultiPickerColumnChange" value="{{multiIndex}}" range="{{multiArray}}">
+    <input value='{{time}}' placeholder='选择时间'/>
+  </picker> 
